<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/background_light"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/all_chat_app"
                android:textColor="@color/text_toolbar_title"
                android:textSize="@dimen/size_toolbar_text" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/layout_progressbar" />

    <LinearLayout
        android:id="@+id/linearlayout_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/paddingstart_login_mainlayout"
        android:paddingTop="@dimen/paddingtop_login_mainlayout"
        android:paddingEnd="@dimen/paddingend_login_mainlayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/all_username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_login_password"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/all_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_login_loginbutton"
            android:text="@string/all_login"
            android:textAllCaps="false"
            app:backgroundTint="@color/button_primary" />

        <TextView
            android:id="@+id/textview_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_sign_up" />

        <TextView
            android:id="@+id/textview_login_termsofservice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_login_termstextview" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>